<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Library_Master</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_name">账号</string>
    <string name="user_pass">密码</string>
    <string name="btn_login">登录</string>
    <string name="welcome_Login">欢迎使用图书管理系统</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_welocme">WelocmeActivity</string>
    <string name="btn_alter_password">修改密码</string>
    <string name="back">&lt;返回</string>
    <string name="lent">借阅</string>
    <string name="cancel">取消</string>
    <string name="tip_name">请输入管理员账号</string>
    <string name="tip_pass">请输入管理员密码</string>
    <string name="main_tip">扫描二维码可得到图书信息</string>
    <string name="lend_book">借阅图书</string>
    <string name="return_book">归还图书</string>
    <string name="toolbar_left_text">当班详情</string>
    <string name="toolbar_right_text">预约情况</string>
    <string name="toolbar_certer_text">借还书籍</string>
    <string name="return_text">归还</string>
    <string name="search">搜索</string>
    <string name="state_lent">借阅详情</string>
    <string name="state_return">归还详情</string>
    <string name="edi_search_hint">请输入索书号/书名</string>
    <string name="title_activity_alter_pass_">Alter_pass_Activity</string>
    <string name="OK">确认</string>
    <string name="original_pass">原密码</string>
    <string name="original_name">原账号</string>
    <string name="new_pass">新密码</string>
    <string name="tip_new_pass">请输入新密码</string>
    <string name="edi_search_hint_right">请输入书名/姓名/ISBN</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="main_timer">当班时长:  </string>
    <string name="ensure">确认无误</string>
    <string name="book_list">书籍清单</string>
    <string name="damage_registration">损坏登记</string>
    <string name="state_untreated">未处理</string>
    <string name="state_await">待取走</string>
    <string name="store">存柜</string>
    <string name="title_activity_damage">Damage</string>

</resources>
