<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac_login"
    tools:context="com.example.library_master.LoginActivity" >

    
    <!--  
    <Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/toolbar_only_stroke" >

        
             
        <Button
            android:id="@+id/btn_login_back"
            android:layout_width="35dp"
            android:layout_height="35dp"          
            android:background="@drawable/ic_find_next_holo_light" />
           
       
    </Toolbar>
    -->
    <!-- 
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/welcome_Login"
        android:textSize="20sp" />
    
     -->

    <TableRow
        android:id="@+id/user_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittext"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" 
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/user_name"
            android:textSize="20sp" 
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:inputType="text" 
            android:paddingLeft="15dp"
            android:hint="@string/tip_name"
            android:background="@null"/>
    </TableRow>

    <TableRow
        android:id="@+id/pass_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_table"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/user_pass"
            android:textSize="20sp" 
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/user_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingLeft="15dp"
            android:inputType="textPassword" 
            android:hint="@string/tip_pass"
            android:background="@null"/>
    </TableRow>
    
    <Button 
        android:id="@+id/alter_pass"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/pass_table"
        android:background="#00ffffff"
        android:text="@string/btn_alter_password"
        android:textColor="#0099aa"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_table"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_button"
        android:text="@string/btn_login" 
        android:textSize="19sp"/>

</RelativeLayout>