<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.library_master.MainActivity" >

    <Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="fill_parent"
        android:layout_height="72dp"
        android:layout_alignParentTop="true" 
        android:background="@drawable/toolbar_search"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <Button
                android:id="@+id/btn_search"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/search" 
                android:layout_alignParentRight="true"
                android:layout_marginRight="12dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/button_search"
                />
            <RelativeLayout 
                android:layout_toLeftOf="@id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/search_bac"
                android:layout_marginRight="5dp"
                >
                <EditText 
                    android:id="@+id/search_edi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="40dp"
                    android:paddingLeft="38dp"
                    android:background="@null"
                    android:hint="@string/edi_search_hint_right"
                    android:singleLine="true"
                    />
                <ImageView 
                    android:id="@+id/img_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_clear_search_api_holo_light"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    />
                <ImageView 
                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_menu_search_holo_light"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="4dp"
                    />
            </RelativeLayout>
        </RelativeLayout>
    </Toolbar>
  
            

    <Toolbar 
        android:id="@+id/toolbar_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:paddingTop="3dp"
        android:paddingRight="10dp"
        android:paddingLeft="25dp"
        android:background="@drawable/toolbar"
        >
        <LinearLayout 
           android:layout_width="fill_parent"
           android:layout_height="match_parent"   
           android:paddingTop="1dp"
            >
            <Button 
                android:id="@+id/btn_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/toolbar_left_text"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/left_bac"
                android:textSize="11sp"
                />
            <Button 
                android:id="@+id/btn_certer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/toolbar_certer_text"
                android:gravity="bottom|center_horizontal"
                android:background="@drawable/certer_bac"
                android:textSize="11sp"
                />
            <Button 
                android:id="@+id/btn_right"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/toolbar_right_text"
                android:gravity="bottom|center_horizontal"
                android:textColor="@color/main_font_color"
                android:background="@drawable/right_click_bac"
                android:textSize="11sp"
                />      
            
        </LinearLayout>
                
    </Toolbar>
    <Toolbar 
        android:id="@+id/toobar_state"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_below="@id/toolbar_top"
        android:background="@drawable/toolbar"
        >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/txv_state_untreated"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/state_untreated"    
                android:textSize="18sp" 
                android:textColor="@color/main_color"
                android:gravity="center"         
                />
            <TextView 
                android:id="@+id/txv_state_await"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/state_await" 
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center"             
                />
        </LinearLayout>
        
    </Toolbar>
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d8d8d8"
        android:layout_below="@id/toobar_state"
        android:layout_above="@id/toolbar_bottom"
        >
        <ListView 
        	android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:id="@+id/mRight_ListView"
	        android:footerDividersEnabled="false" 
	        android:divider="@drawable/divider"    
	        android:dividerHeight="10dp"
	        >
        </ListView>
    </RelativeLayout>


</RelativeLayout>